# dev-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  dev-feature  dev-launcher.ps1  qmd-query-workspace  qmd-setup-workspace  repos.conf  search-workspace
.github/workflows/: ci.yml  release.yml
dev-launcher/: Cargo.toml
dev-launcher/src/: main.rs
docs/: cli-reference.md  configuration.md  getting-started.md  tui-guide.md  workspace-concept.md
recipes/: diag-alembic-revision-missing.toml  diag-disk-full.toml  diag-econnrefused.toml  diag-elasticsearch.toml  diag-invalid-pem.toml  diag-maven-dep-not-found.toml  diag-maven-typetag-unknown.toml  diag-minio.toml  diag-node-module-missing.toml  diag-oom.toml  diag-permission-denied.toml  diag-placeholder-credentials.toml  diag-port-conflict.toml  diag-postgres.toml  diag-python-module-missing.toml  diag-rabbitmq.toml  diag-redis.toml  diag-spring-boot-exited-clean.toml  diag-tls-cert.toml  diag-vite-missing.toml  infinity-emb-click.toml  infinity-emb-optimum.toml  infinity-emb-typer.toml
src/: args.rs  config.rs  control.rs  launcher_log.rs  main.rs
src/diagnosis/: engine.rs  github.rs  llm.rs  mod.rs  patterns.rs  recipe.rs
src/infra/autoresearch/: runner.py  train.py
src/infra/grafana/: docker-compose.dev.yml  loki-config.yml  promtail-config.yml
src/infra/infinity/: proxy.py
src/infra/langfuse/: docker-compose.dev.yml
src/services/: docker.rs  manifest.rs  mod.rs  process.rs
src/tui/: credentials.rs  diagnose.rs  logview.rs  mod.rs  overview.rs  splash.rs
src/workspace/: env.rs  git.rs  mod.rs  pem.rs  repos.rs  selector.rs
