[package]
name    = "dev-launcher"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "dev-launcher"
path = "src/main.rs"

[dependencies]
clap         = { version = "4", features = ["derive"] }
ureq         = { version = "2", features = ["tls"] }
ctrlc        = { version = "3", features = ["termination"] }
libc         = "0.2"
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
serde        = { version = "1", features = ["derive"] }
serde_yaml   = "0.9"
toml         = "0.8"
