[package]
name    = "dev-launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dev-feature"
path = "src/main.rs"

[dependencies]
clap  = { version = "4", features = ["derive"] }
ureq  = { version = "2", features = ["native-tls"] }
ctrlc = { version = "3", features = ["termination"] }
libc  = "0.2"
